Add unit tests for AdminAnalyticsService, EnrollmentService, AICostService, ContentExtractorService, and CustomMaterialProcessingService
- Implement tests for AdminAnalyticsService to validate analytics data retrieval.
- Enhance EnrollmentServiceTest with UserProfileRepository mock and additional test cases for user enrollment scenarios.
- Update AICostServiceTest to include AIConfigService mock and validate cost analytics retrieval.
- Create ContentExtractorServiceImplTest to cover various content extraction scenarios from different sources.
- Introduce CustomMaterialPromptsTest to validate prompt resolution logic.
- Extend RolePlayServiceImplTest to include AIConfigService and validate role-play scenario generation and conversation handling.
- Add CustomMaterialProcessingServiceImplTest to ensure proper processing of custom materials and handling of various outcomes.
- Update application.properties for test configurations including Stripe and AI keys.